# eros

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.openai/: hosting.json
drizzle/: 0000_eros.sql  0001_node_lifecycle_and_feedback.sql  0002_segment_recombination.sql  0003_treasures.sql  0004_allow_duplicate_treasure_subjects.sql  0005_treasure_titles.sql  0006_narrators.sql  0007_proposal_stone.sql
prisma/: schema.prisma  seed.ts
prisma/migrations/20260712045659_init/: migration.sql
prisma/migrations/20260712050000_immutable_protocol_records/: migration.sql
prisma/migrations/20260712124201_node_lifecycle_and_feedback/: migration.sql
prisma/migrations/20260712150000_segmented_recombination/: migration.sql
scripts/: backfill-images.ts  backup-hosted-world.ts  ensure-sqlite.ts  reset-world.ts
services/flux2/: benchmark_sizes.py  pyproject.toml  server.py  test_generate.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/protocol/: page.tsx
src/app/treasures/: page.tsx
src/components/faust/: FaustChat.tsx
src/lib/: api.ts  faust-markdown.ts  faust.ts  genesis-service.ts  reproduction-service.ts  story-context.ts  story.ts  world.ts
src/lib/db/: serialize.ts
test/e2e/: eros.spec.ts
test/protocol/: bfl-provider.test.ts  core.test.ts  faust-markdown.test.ts  faust.test.ts  graph.test.ts  narrator.test.ts  proposal.test.ts  story-context.test.ts  story.test.ts  treasure.test.ts  world.test.ts
worker/: index.ts
(+94 files in other folders)
