[project]
name = "eros-flux2-local"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.14.0",
  "diffusers @ git+https://github.com/huggingface/diffusers.git",
  "fastapi>=0.139.0",
  "pillow>=12.3.0",
  "protobuf>=7.35.1",
  "safetensors>=0.8.0",
  "sentencepiece>=0.2.1",
  "torch>=2.13.0",
  "transformers>=5.13.1",
  "uvicorn>=0.51.0",
]
